--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/css/style.css" type="text/css">
     <title>Login</title>
 </head>
-<body>
-    <h1>login</h1>
+
+<body class="flex-row-center-center">
+    <div class="container flex-column-center-center">
+        <h1>Login</h1>
+
+        <form action="" class="flex-column-center-center">
+            <input type="email" placeholder="email">
+            <input type="password" placeholder="password">
+            <button>Sign in</button>
+        </form>
+    </div>
+
+
 </body>
+
 </html>
