--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ form>textarea {
     width: 400px;
     border-radius: 1em;
     padding: 1em;
-    border:0;
+    border: 0;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
@@ -43,4 +43,17 @@ button {
     box-sizing: content-box;
     border: 0;
     box-shadow: unset
+}
+
+@media screen and (max-width: 414px) {
+    form,
+    .container {
+        width: 100%;
+    }
+
+    form>input,
+    form>textarea,
+    form>button {
+        width: calc(100% - 1em);
+    }
 }
