--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,7 @@
 body {
     background-color: rgb(146, 181, 212);
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 20px;
     height: 100vh;
 }
 
