--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .wrap {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .flex-row-center-center {
@@ -31,7 +31,6 @@ body {
   align-items: center;
   gap: 1.3em;
 }
-
 
 .container {
   background-color: white;
@@ -83,7 +82,6 @@ form > button {
   border-radius: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-
   font-weight: 900;
   font-size: 16px;
   letter-spacing: 0.15em;
@@ -100,6 +98,34 @@ form > button {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.15em;
+}
+
+
+#tos-checkbox {
+    box-sizing: border-box;
+    border: 2px solid #58c3b5;
+    border-radius: 20px;
+}
+
+.tos-text {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+
+  letter-spacing: 0.05em;
+  color: #ebf6e5;
+}
+
+.tos-text > a {
+    text-decoration: underline;
+}
+
+.tos-text > a:link {
+    color: white;
+}
+
+.tos-text > a:visited {
+    color: royalblue;
 }
 
 .sidebar {
