--- a/public/views/register.html
+++ b/public/views/register.html
@@ -11,10 +11,24 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <title><?= $title; ?></title>
   </head>
 
   <body class="flex-row-around-center wrap">
+    <div class="follow-bar">
+      <span class="text-bold-sm">Follow us</span>
+      <img src="public/assets/follow-bar/line.svg" />
+      <img src="public/assets/follow-bar/fb.svg" />
+      <img src="public/assets/follow-bar/ig.svg" />
+      <img src="public/assets/follow-bar/linkedin.svg" />
+      <img src="public/assets/follow-bar/arrow_left.svg" />
+    </div>
+
+
     <div class="logo">
       <img src="public/assets/logo_with_name.svg" />
     </div>
