--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,13 @@
 body {
-  background-color: #121d0b;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
-
   font-family: "Inter";
   font-style: normal;
 }
 
-.flex-row-around-center {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.full-container {
+  height: 100vh;
+  width: 100vw;
+  background-color: #121d0b;
 }
 
 .follow-bar {
@@ -49,12 +45,18 @@ body {
   align-items: center;
 }
 
+.flex-row-evenly-center {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .flex-column-center-center {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.3em;
+  gap: 1.5em;
 }
 
 .container {
@@ -77,7 +79,7 @@ form > textarea {
 }
 
 form > input {
-  width: 290px;
+  width: 300px;
   height: 50px;
 
   text-align: center;
@@ -86,8 +88,8 @@ form > input {
 form > button {
   width: 200px;
   height: 65px;
-  box-sizing: border-box;
 
+  box-sizing: border-box;
   text-transform: uppercase;
 }
 
@@ -97,7 +99,7 @@ form > button {
   color: #ebf6e5;
 
   font-weight: 700;
-  font-size: 1em;
+  font-size: 1.2em;
   letter-spacing: 0.18em;
 }
 
@@ -182,25 +184,23 @@ form > button {
   border-radius: 1em 1em 0 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 600px) {
   body {
     height: 100vh !important;
     margin-top: 0 !important;
+  }
+
+  .full-container {
+    flex-direction: column;
   }
 
   .container {
     box-sizing: border-box;
   }
 
-  form,
+  /* form,
   .container {
     width: 100%;
-  }
-
-  /* form > input,
-  form > textarea,
-  form > button {
-    width: 100%; 
   } */
 
   .main {
