--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,37 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/style.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <title><?= $title; ?></title>
   </head>
 
-  <body class="flex-row-around-center wrap">
-    <div class="follow-bar">
-      <span class="text-bold-sm">Follow us</span>
-      <img src="public/assets/follow-bar/line.svg" />
-      <img src="public/assets/follow-bar/fb.svg" />
-      <img src="public/assets/follow-bar/ig.svg" />
-      <img src="public/assets/follow-bar/linkedin.svg" />
-      <img src="public/assets/follow-bar/arrow_left.svg" />
-    </div>
+  <body>
+    <main class="full-container flex-row-evenly-center">
+      <div class="follow-bar">
+        <span class="text-bold-sm">Follow us</span>
+        <img src="public/assets/follow-bar/line.svg" />
+        <img src="public/assets/follow-bar/fb.svg" />
+        <img src="public/assets/follow-bar/ig.svg" />
+        <img src="public/assets/follow-bar/linkedin.svg" />
+        <img src="public/assets/follow-bar/arrow_left.svg" />
+      </div>
 
+      <div class="logo">
+        <img src="public/assets/logo_with_name.svg" />
+      </div>
 
-    <div class="logo">
-      <img src="public/assets/logo_with_name.svg" />
-    </div>
-
-    <form action="" class="flex-column-center-center gap">
-      <input class="login-input" name="email" type="email" placeholder="email" />
-      <input class="login-input" name="password" type="password" placeholder="password" />
-      <button class="main-button" type="submit">Sign in</button>
-      <button class="secondary-button" type="button">Create account</button>
-    </form>
+      <form action="" class="flex-column-center-center">
+        <input
+          class="login-input"
+          name="email"
+          type="email"
+          placeholder="email"
+        />
+        <input
+          class="login-input"
+          name="password"
+          type="password"
+          placeholder="password"
+        />
+        <button class="main-button" type="submit">Sign in</button>
+        <button class="secondary-button" type="button">Create account</button>
+      </form>
+    </main>
   </body>
 </html>
