--- a/public/views/register.html
+++ b/public/views/register.html
@@ -11,59 +11,63 @@
       rel="stylesheet"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <title><?= $title; ?></title>
   </head>
 
-  <body class="flex-row-around-center wrap">
-    <div class="follow-bar">
-      <span class="text-bold-sm">Follow us</span>
-      <img src="public/assets/follow-bar/line.svg" />
-      <img src="public/assets/follow-bar/fb.svg" />
-      <img src="public/assets/follow-bar/ig.svg" />
-      <img src="public/assets/follow-bar/linkedin.svg" />
-      <img src="public/assets/follow-bar/arrow_left.svg" />
-    </div>
-
-
-    <div class="logo">
-      <img src="public/assets/logo_with_name.svg" />
-    </div>
-
-    <form action="" class="flex-column-center-center gap">
-      <input
-        class="login-input"
-        name="email"
-        type="email"
-        placeholder="email address"
-      />
-      <input
-        class="login-input"
-        name="username"
-        type="text"
-        placeholder="username"
-      />
-      <input
-        class="login-input"
-        name="password"
-        type="password"
-        placeholder="password"
-      />
-      <input
-        class="login-input"
-        name="confirm-password"
-        type="password"
-        placeholder="confirm password"
-      />
-      <div>
-        <input type="checkbox" id="tos-checkbox"/>
-        <span class="tos-text">I accepted <a href="#">TOS</a>.</span>
+  <body>
+    <main class="full-container flex-row-evenly-center">
+      <div class="follow-bar">
+        <span class="text-bold-sm">Follow us</span>
+        <img src="public/assets/follow-bar/line.svg" />
+        <img src="public/assets/follow-bar/fb.svg" />
+        <img src="public/assets/follow-bar/ig.svg" />
+        <img src="public/assets/follow-bar/linkedin.svg" />
+        <img src="public/assets/follow-bar/arrow_left.svg" />
       </div>
 
-      <button class="main-button" type="submit">Sign up</button>
-    </form>
+      <div class="logo">
+        <img src="public/assets/logo_with_name.svg" />
+      </div>
+
+      <form action="" class="flex-column-center-center gap">
+        <input
+          class="login-input"
+          name="email"
+          type="email"
+          placeholder="email address"
+        />
+        <input
+          class="login-input"
+          name="username"
+          type="text"
+          placeholder="username"
+        />
+        <input
+          class="login-input"
+          name="password"
+          type="password"
+          placeholder="password"
+        />
+        <input
+          class="login-input"
+          name="confirm-password"
+          type="password"
+          placeholder="confirm password"
+        />
+        <div>
+          <input type="checkbox" id="tos-checkbox" />
+          <span class="tos-text">I accepted <a href="#">TOS</a>.</span>
+        </div>
+
+        <button class="main-button" type="submit">Sign up</button>
+      </form>
+    </main>
   </body>
 </html>
