--- a/public/views/register.html
+++ b/public/views/register.html
@@ -18,6 +18,8 @@
       rel="stylesheet"
     />
 
+    <script type="text/javascript" src="public/js/register.js" defer></script>
+
     <title><?= $title; ?></title>
   </head>
 
@@ -36,37 +38,65 @@
         <img src="public/assets/logo_with_name.svg" />
       </div>
 
-      <form action="" class="flex-column-center-center gap">
-        <input
-          class="login-input"
-          name="email"
-          type="email"
-          placeholder="email address"
-        />
-        <input
-          class="login-input"
-          name="username"
-          type="text"
-          placeholder="username"
-        />
-        <input
-          class="login-input"
-          name="password"
-          type="password"
-          placeholder="password"
-        />
-        <input
-          class="login-input"
-          name="confirm-password"
-          type="password"
-          placeholder="confirm password"
-        />
-        <div>
-          <input type="checkbox" id="tos-checkbox" />
-          <span class="tos-text">I accepted <a href="#">TOS</a>.</span>
+      <form action="register" method="post" class="flex-column-center-center gap-1-5">
+        <div class="flex-column-center-center">
+          <input
+            class="login-input"
+            name="email"
+            type="email"
+            placeholder="email address"
+            required
+          />
+          <span id="email-error" class="error-message"></span>
         </div>
 
-        <button class="main-button" type="submit">Sign up</button>
+        <div class="flex-column-center-center">
+          <input
+            class="login-input"
+            name="username"
+            type="text"
+            placeholder="username"
+            required
+          />
+          <span id="username-error" class="error-message"></span>
+        </div>
+
+        <div class="flex-column-center-center">
+          <input
+            class="login-input"
+            name="password"
+            type="password"
+            placeholder="password"
+            required
+            minlength="8"
+          />
+          <span id="password-error" class="error-message"></span>
+        </div>
+
+        <div class="flex-column-center-center">
+          <input
+            class="login-input"
+            name="confirmedPassword"
+            type="password"
+            placeholder="confirm password"
+            required
+          />
+          <span id="confirm-error" class="error-message"></span>
+        </div>
+
+        <div class="flex-column-center-center">
+          <div>
+            <input type="checkbox" id="tos-checkbox" required />
+            <span class="tos-text">I accepted <a href="#">TOS</a>.</span>
+          </div>
+          <span id="tos-error" class="error-message"></span>
+        </div>
+
+        <button class="main-button" type="submit">
+          Sign up
+        </button>
+
+        <span class="error-message"><?= $message; ?></span>
       </form>
     </main>
   </body>
