--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,12 +51,15 @@ body {
   align-items: center;
 }
 
-.flex-column-center-center {
+.gap-1-5 {
+  gap: 1.5em;
+}
+
+.flex-column-center-center{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.5em;
 }
 
 .container {
@@ -71,24 +74,21 @@ body {
   width: 240px;
 }
 
-form > input,
-form > button,
-form > textarea {
-  border: 0;
-  border-radius: 10px;
-}
-
-form > input {
+form input[type="text"],
+form input[type="email"],
+form input[type="password"] {
   width: 300px;
   height: 50px;
-
+  border: 0;
+  border-radius: 10px;
   text-align: center;
 }
 
-form > button {
+form button {
   width: 200px;
   height: 65px;
-
+  border: 0;
+  border-radius: 10px;
   box-sizing: border-box;
   text-transform: uppercase;
 }
@@ -152,6 +152,14 @@ form > button {
 
 .tos-text > a:visited {
   color: royalblue;
+}
+
+.error-message {
+  height: 14px;
+  color: red;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 5px;
 }
 
 .sidebar {
