--- a/public/views/register.html
+++ b/public/views/register.html
@@ -38,7 +38,11 @@
         <img src="public/assets/logo_with_name.svg" />
       </div>
 
-      <form action="register" method="post" class="flex-column-center-center gap-1-5">
+      <form
+        action="register"
+        method="post"
+        class="flex-column-center-center gap-1-5"
+      >
         <div class="flex-column-center-center">
           <input
             class="login-input"
@@ -92,9 +96,7 @@
           <span id="tos-error" class="error-message"></span>
         </div>
 
-        <button class="main-button" type="submit">
-          Sign up
-        </button>
+        <button class="main-button" type="submit">Sign up</button>
 
         <span class="error-message"><?= $message; ?></span>
       </form>
