--- a/public/views/quests.html
+++ b/public/views/quests.html
@@ -9,37 +9,94 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+
+    <script type="text/javascript" src="public/js/sidenav.js" defer></script>
+
     <title><?= $title; ?></title>
   </head>
 
   <body>
-    <!-- Navigation -->
-    <nav class="flex-row-center-center">
-      <a href="#"><i class="fas fa-home"></i> Home</a>
-      <a href="#"><i class="fas fa-search"></i> Search</a>
-      <a href="#"><i class="fas fa-user"></i> Profile</a>
-      <a href="#"><i class="fas fa-envelope"></i> Messages</a>
-      <a href="#" id="menu"><i class="fas fa-cog"></i> Settings</a>
-    </nav>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        ><img src="public/assets/back_arrow.svg"
+      /></a>
 
-    <div class="add flex-column-center-center">
-      <i class="fas fa-plus"></i>
-    </div>
+      <div class="sidenav-inner">
+        <a class="nav-link flex-column-center-center" href="#">
+          Quests
+          <svg
+            width="132"
+            height="2"
+            viewBox="0 0 132 2"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0 1H132" stroke="#EBF6E5" stroke-width="2" />
+          </svg>
+        </a>
 
-    <div class="container flex-row-center-center">
-      <div class="sidebar">SIDEBAR</div>
-      <div class="main">
-        <h1>DASHBOARD</h1>
+        <a class="nav-link flex-column-center-center" href="#">
+          Profile
+          <svg
+            width="132"
+            height="2"
+            viewBox="0 0 132 2"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M0 1H132" stroke="#EBF6E5" stroke-width="2" />
+          </svg>
+        </a>
 
-        <div class="projects flex-row-center-center">
-          <?php foreach($quests as $quest): ?>
-          <div class="card">
-            <h2><?= $quest->getDescription(); ?></h2>
-            <p><?= $quest->getRequiredWallet(); ?></p>
-          </div>
-          <?php endforeach; ?>
+        <button class="main-button">Sign out</button>
+
+        <div class="logo">
+          <img src="public/assets/logo_with_name.svg" />
         </div>
+
+        <div class="follow-bar-mobile">
+          <div class="follow-row">
+            <span class="text-bold-sm">Follow us</span>
+            <img src="public/assets/follow-bar/line.svg" />
+          </div>
+          <div class="follow-row">
+            <img src="public/assets/follow-bar/fb.svg" />
+            <img src="public/assets/follow-bar/ig.svg" />
+            <img src="public/assets/follow-bar/linkedin.svg" />
+            <img src="public/assets/follow-bar/arrow_left.svg" />
+          </div>
+        </div>
+
+        <span class="copyright">
+          Copyright ChainQuest 2024 chainquest@gmail.com
+        </span>
       </div>
     </div>
+
+    <nav>
+      <img src="public/assets/menu.svg" onclick="openNav()" />
+
+      <div class="follow-bar">
+        <span class="text-bold-sm">Follow us</span>
+        <img src="public/assets/follow-bar/line.svg" />
+        <img src="public/assets/follow-bar/fb.svg" />
+        <img src="public/assets/follow-bar/ig.svg" />
+        <img src="public/assets/follow-bar/linkedin.svg" />
+        <img src="public/assets/follow-bar/arrow_left.svg" />
+      </div>
+    </nav>
   </body>
 </html>
