--- a/public/views/register.html
+++ b/public/views/register.html
@@ -25,7 +25,7 @@
 
   <body>
     <main class="full-container flex-row-evenly-center">
-      <div class="follow-bar">
+      <div class="follow-bar absolute-follow">
         <span class="text-bold-sm">Follow us</span>
         <img src="public/assets/follow-bar/line.svg" />
         <img src="public/assets/follow-bar/fb.svg" />
