--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,42 +1,100 @@
-body {
-    margin-top: calc(100px + 2em);
-    height: 200vh;
-}
-
 nav {
-    background-color: white;
-    width: 100vw;
-    height: 100px;
-    box-shadow: rgba(52, 51, 51, 0.45) 0px 15px 20px -20px;
-    gap: 2em;
+  position: fixed;
+  width: 100vw;
+  height: 70px;
+  top: 0;
 
-    position: fixed;
-    top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav>a {
-    text-decoration: none;
-    color: black;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5em;
+nav > img {
+  margin-left: 35px;
 }
 
-nav > a > i {
-    font-size: 1.5em;
+body {
+  margin-top: calc(70px + 2em);
+  background-color: #121d0b;
+  min-height: 100vh;
 }
 
-.add {
-    bottom: 1em;
-    right: 1em;
-    position: fixed;
-    font-size: 2em;
-    width: 75px;
-    height: 75px;
-    background-color: white;
-    border-radius: 50%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+.nav-link {
+  padding-bottom: 1em;
+  font-family: "Lekton";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #58c3b5;
+  text-decoration: none;
+}
+
+.follow-bar-mobile {
+  display: none;
+}
+
+.sidenav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  z-index: 1;
+  background-color: #28361d;
+  overflow-x: hidden;
+  transition: 0.5s;
+  text-align: center;
+}
+
+.sidenav-inner {
+  height: calc(100vh - 100px - 20px);
+  margin-top: 100px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-link {
+  color: #ebf6e5;
+}
+
+.nav-link:hover {
+  color: #58c3b5;
+}
+
+.nav-link:hover svg path {
+  stroke: #58c3b5;
+}
+
+.copyright {
+  font-family: "Lekton";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 14px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #ebf6e5;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
