list quest info in card

--- a/public/views/quests.html
+++ b/public/views/quests.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="public/css/style.css" type="text/css" />
     <link rel="stylesheet" href="public/css/nav.css" type="text/css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +22,10 @@
     />
 
     <script type="text/javascript" src="public/js/sidenav.js" defer></script>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <title><?= $title; ?></title>
   </head>
 
@@ -98,5 +99,58 @@
         <img src="public/assets/follow-bar/arrow_left.svg" />
       </div>
     </nav>
+
+    <main class="flex-column-center-center">
+      <?php foreach($quests as $quest): ?>
+
+      <div class="card-background">
+        <div class="card-image-background">
+          <img
+            class="card-image"
+            src="https://picsum.photos/300/200"
+            alt="image"
+          />
+        </div>
+        <div class="card-inner">
+          <span class="title"><?= $quest->getTitle(); ?></span>
+          <div class="card-infos">
+            <span class="info">
+              <i class="fas fa-book-open"></i>
+              <?= $quest->getWorthKnowledge(); ?>
+            </span>
+
+            <span class="info">
+              <i class="fas fa-wallet"></i>
+              <?= $quest->getRequiredWallet(); ?>
+            </span>
+
+            <span class="info">
+              <i class="fas fa-flag-checkered"></i>
+              <?= $quest->getTimeRequired(); ?>
+            </span>
+          </div>
+
+          <p class="description"><?= $quest->getDescription(); ?></p>
+        </div>
+        <div class="card-right-background">
+          <span class="info">
+            <i class="fas fa-clock"></i>
+            <?= $quest->getExpiryDate(); ?>
+          </span>
+
+          <span class="info">
+            <i class="fas fa-running"></i>
+            <?= $quest->getParticipantsCount(); ?>
+          </span>
+          <span class="info">
+            <i class="fas fa-coins"></i>
+            <?= $quest->getPoolAmount(); ?>
+          </span>
+
+          <button class="enter-button">ENTER</button>
+        </div>
+      </div>
+      <?php endforeach; ?>
+    </main>
   </body>
 </html>
