--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -36,16 +36,18 @@ body {
   display: none;
 }
 
+
 .sidenav {
   position: fixed;
   top: 0;
+  opacity: 0;
   left: 0;
   height: 100%;
   width: 0;
   z-index: 1;
   background-color: #28361d;
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: width 0.5s ease, opacity 1s ease-in; 
   text-align: center;
 }
 
