--- a/public/views/quests.html
+++ b/public/views/quests.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="public/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="public/css/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/public/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/public/css/nav.css" type="text/css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -147,7 +147,7 @@
             <?= $quest->getPoolAmount(); ?>
           </span>
 
-          <button class="enter-button">ENTER</button>
+          <a href="/enterQuest/<?= $quest->getQuestId(); ?>" class="enter-button" style="text-decoration: none;">ENTER</a>
         </div>
       </div>
       <?php endforeach; ?>
