--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,8 @@ body {
 
 form input[type="text"],
 form input[type="email"],
-form input[type="password"] {
+form input[type="password"],
+form select {
   width: 300px;
   height: 50px;
   border: 0;
@@ -200,6 +201,10 @@ form input[type="password"] {
   font-weight: bold;
   font-size: 14px;
   margin-top: 5px;
+}
+
+#newWalletInput {
+  display: none;
 }
 
 .card-background {
