handle entering quest, ready for rendering questions

--- a/public/views/enterQuest.html
+++ b/public/views/enterQuest.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="/public//css/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/public/css/nav.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,7 +34,7 @@
       <span class="wallet-name"> Wallet name </span>
 
       <form action="" method="post" class="flex-column-center-center gap-1-5">
-        <select id="walletSelect" onchange="handleWalletSelect(this)" class="login-input">
+        <select id="walletSelect" name="walletSelect" onchange="handleWalletSelect(this)" class="login-input">
           <?php foreach($wallets as $wallet): ?>
           <option value="<?=$wallet->getWalletId(); ?>">
             <?= $wallet->getWalletAddress(); ?>
@@ -46,7 +46,7 @@
 
         <input
           id="newWalletInput"
-          name="wallet-address"
+          name="newWalletAddress"
           type="text"
           class="login-input"
           placeholder="wallet address"
