--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,15 @@ body {
   background-color: #00ff40;
 }
 
+.text-background {
+  overflow-y: scroll;
+  padding: 10px;
+  width: 80%;
+  height: 60vh;
+  background: linear-gradient(90deg, #b0da99 0%, #58c3b5 100%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .score {
   font-family: "Lekton";
   font-style: normal;
@@ -182,6 +191,16 @@ body {
   text-align: center;
   letter-spacing: 0.05em;
   color: #ebf6e5;
+}
+
+.read-text {
+  font-family: "Lekton";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1em;
+  letter-spacing: 0.05em;
+  text-align: justify;
+  color: #000000;
 }
 
 .logo > img {
