--- a/public/css/style.css
+++ b/public/css/style.css
@@ -641,6 +641,7 @@ i {
 }
 
 .profile-column {
+  min-width: 400px;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -724,10 +725,11 @@ i {
   border: 2px solid #b0da99;
 
   border-radius: 30px;
-  padding: 0.8em;
+  padding: 0.5em 1em;
 
   display: flex;
   justify-content: space-around;
+  align-items: center;
   gap: 1em;
 }
 
@@ -738,4 +740,109 @@ i {
   font-size: 1.5em;
 
   color: #ebf6e5;
+}
+
+.achievement {
+  padding: 2em;
+  border-radius: 100%;
+  background: #b0da99;
+}
+
+.previous-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+
+  width: 70%;
+  background: rgba(41, 112, 80, 0.2);
+  border: 1px solid #297050;
+  box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+}
+
+.image-background {
+  grid-column: 1;
+  grid-row-start: 1;
+  grid-row-end: span 2;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2em;
+
+  aspect-ratio: 1/1;
+
+  background: linear-gradient(180deg, #b0da99 0%, #65ccb8 100%);
+  border-radius: 20px 0px;
+}
+
+.image-background > img {
+  width: 80%;
+  height: 80%;
+  border-radius: 20px 0 20px 0;
+}
+
+.previous-title {
+  grid-row: 1;
+  grid-column: 2 / span 2;
+
+  font-family: "Lekton";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.5em;
+  letter-spacing: 0.05em;
+  color: #ebf6e5;
+
+  align-self: center;
+}
+
+.button-container {
+  grid-row: 3;
+  grid-column: 1 / span 3;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.view-button {
+  width: 20%;
+  padding: 0.2em 0.5em;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2em;
+  text-align: center;
+  letter-spacing: 0.4em;
+  color: #000000;
+  text-decoration: none;
+  background: #b0da99;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.info-bar {
+  width: 95%;
+  grid-column: 2 / span 2;
+  grid-row: 2;
+
+  background: rgba(41, 112, 80, 0.2);
+  border: 1px solid #297050;
+  border-radius: 10px;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.quest-info i {
+  margin-right: 0.5em;
+}
+
+.quest-info .info-text {
+  font-family: "Lekton";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1em;
+  color: #ffffff;
 }
