choosing and saving wallets

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,10 @@ body {
   background-color: #121d0b;
 }
 
+#add-wallet-form {
+  display: none;
+}
+
 .full-container {
   height: 100vh;
   width: 100vw;
